--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Jogo da Velha</title>
 </head>
 
@@ -30,7 +31,7 @@
         </div>
     </div>
 
-    <input type="button" value="Resetar" onclick="resetGame()">
+    <input class="btn_reiniciar" type="button" value="Reiniciar" onclick="resetGame()">
 
     
 <script src="./js/game.js"></script>
